--- a/kubernetes-configmap-reload/Dockerfile
+++ b/kubernetes-configmap-reload/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8-jdk-alpine
 COPY ./target/*.jar app.jar
 ENV JAVA_OPTS=""
-EXPORT 8081
+EXPOSE 8081
 ENTRYPOINT exec java -jar app.jar --info
